@@ -1,2 +1,0 @@
-src/egrep.c
-src/fgrep.c
