@@ -1,2 +1,0 @@
-#define EGREP_PROGRAM
-#include "grep.c"
