@@ -12,3 +12,7 @@ struct matcher const matchers[] = {
   { NULL, NULL, NULL },
 };
 
+const char before_options[] =
+N_("PATTERN is an extended regular expression (ERE).\n");
+const char after_options[] =
+N_("Invocation as `egrep' is deprecated; use `grep -E' instead.\n");
