@@ -1,2 +1,0 @@
-#define FGREP_PROGRAM
-#include "grep.c"
