@@ -6,3 +6,7 @@ struct matcher const matchers[] = {
   { NULL, NULL, NULL },
 };
 
+const char before_options[] =
+N_("PATTERN is a set of newline-separated fixed strings.\n");
+const char after_options[] =
+N_("Invocation as `fgrep' is deprecated; use `grep -F' instead.\n");
